# barkeel-web

./: .env_example  .gitignore  Cargo.toml  package-lock.json  package.json  postcss.config.js  readme.md  rollup.config.mjs  tailwind.config.js
src/: lib.rs  main.rs
src/app/: mod.rs
src/app/controllers/: article_controller.rs  auth_controller.rs  customer_controller.rs  error_controller.rs  index_controller.rs  mod.rs  user_controller.rs
src/app/errors/: handle_error.rs  mod.rs
src/app/jobs/: mail.rs
src/app/middleware/: image.rs
src/app/middlewares/: auth.rs  csrf.rs  locale.rs  mod.rs  session_token.rs  unique_id.rs
src/app/models/: article_model.rs  auth.rs  book_model.rs  customer.rs  mod.rs  page_model.rs  pole_model.rs  user.rs  user_model copy.rs  user_model.rs
src/app/utils/: mod.rs  pagination.rs  response.rs
src/app/views/: index.html  login.html  pagination.html
src/app/views/account/: show.html
src/app/views/article/: index.html  show.html
src/app/views/crud/: form.html  index.html  show.html
src/app/views/customer/: edit.html  index.html  show.html
src/app/views/errors/: 400.html  404.html  error.html
src/app/views/form/: base.html  form.js
src/app/views/form/fields/: autocomplete.html  checkbox.html  datetime-local.html  email.html  file.html  number.html  password.html  radio.html  radiogroup.html  select.html  text.html  textarea.html
src/app/views/layouts/: base.html  footer.html  header.html  sidebar.html
src/app/views/user/: index.html
src/assets/js/: form.js  main.js  quill.js  utils.js
src/config/: application.rs  constants.rs  jobs.rs  mod.rs  routes.rs
src/config/database/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
src/config/routes/: api.rs  mod.rs  web.rs
src/db/: schema.rs
src/db/migrations/2024-03-16-170741_create_books/: up.sql
src/db/migrations/2024-03-16-170758_create_pages/: up.sql
src/locales/en/: crud.ftl  errors.ftl  field.ftl
src/locales/fr/: crud.ftl  errors.ftl  field.ftl
src/public/css/: main.css
src/public/js/: main.js
