[package]
name = "barkeel_web"
version = "0.1.0"
edition = "2021"

[workspace.package]
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum =  { version = "0.7", features = ["multipart"] }
redis = { version = "0.26", features = ["aio", "tokio-comp"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
diesel = { version = "2.2", features = ["extras"] }
dotenvy = "0.15"
env_logger = "0.11"
tokio = { version = "1.40", features = ["sync"] }
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.5", features = ["cors", "normalize-path", "fs"] }
#barkeel_derives = { git = "https://github.com/pierremarcade/barkeel-derives.git"}
#barkeel_lib = { git = "https://github.com/pierremarcade/barkeel-lib.git", features = ["full", "postgres"] }
barkeel_derives = { path = "../barkeel-derives" }
barkeel_lib = { path = "../barkeel-lib", features = ["full", "postgres"] }
cookie = "0.18"
rand = "0.8.5"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
bcrypt = "0.15"
Inflector = "*"
validator = { version = "0.18", features = ["derive"] }
async-std = "=1.12.0"
fluent-templates = { version = "*", features = ["tera"] }
unic-langid = "0.9.5"

[dependencies.tera]
version = "1.20"
optional = true

[features]
default = ["postgres", "web"]
postgres = ["diesel/postgres"]
mysql = ["diesel/mysql"]
sqlite = ["diesel/sqlite"]
web= ["tera"]
api= []

[[bin]]
name="web"
path="src/main.rs"

[[bin]]
name="worker"
path="src/bin/worker/main.rs"
