[package]
name = "barkeel_web"
version = "0.1.0"
edition = "2021"

[workspace.package]
rust-version = "1.82"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.2" }
axum =  { version = "0.7", features = ["multipart"] }
redis = { version = "0.27", features = ["aio", "tokio-comp"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
dotenvy = "0.15"
env_logger = "0.11"
tokio = { version = "1.40", features = ["sync"] }
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = ["cors", "normalize-path", "fs"] }
#barkeel_derives = { git = "https://github.com/pierremarcade/barkeel-derives.git"}
#barkeel_lib = { git = "https://github.com/pierremarcade/barkeel-lib.git", default-features = false }
barkeel_derives = { path = "../barkeel-derives" }
barkeel_lib = { path = "../barkeel-lib", default-features = false}
cookie = "0.18"
rand = "0.8"
jwt = "0.16"
hmac = "0.12"
sha2 = "0.10"
bcrypt = "0.15"
cruet = "*"
validator = { version = "0.18", features = ["derive"] }
async-std = "=1.13.0"
fluent-templates = { version = "*", features = ["tera"] }
unic-langid = "0.9"

[dependencies.tera]
version = "1.20"
optional = true

[features]
default = ["postgres", "web"]
postgres = ["diesel/postgres", "diesel/extras", "barkeel_lib/full", "barkeel_lib/postgres"]
mysql = ["diesel/extras", "diesel/mysql", "barkeel_lib/full", "barkeel_lib/mysql"]
sqlite = ["diesel/extras", "diesel/sqlite", "barkeel_lib/full", "barkeel_lib/sqlite"]
web= ["tera"]
api= []

[[bin]]
name="web"
path="src/main.rs"

[[bin]]
name="worker"
path="src/bin/worker/main.rs"
